PolicyScopeLabels/acs-manifests/01-namespace-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-acs-scope-prod
  labels:
    environment: production
